# CircSim

./: .gitignore  README.md
lib/: gates.circ
simulator/: CMakeLists.txt
simulator/include/: lexer.hpp  parser.hpp
simulator/src/: lexer.cpp  main.cpp  parser.cpp
